<resources>
    <string name="app_name">Todos</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Todos</string>
    <string name="nav_header_subtitle">To help keep your shit together</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_delete_list">Delete List</string>

    <string name="home_second" translatable="false">Home Second</string>

    <string name="menu_settings">Settings</string>

    <string name="title_activity_create_todo">Create Todo</string>
    <string name="first_fragment_label" translatable="false">first fragment</string>
    <string name="create_task_name">Task name</string>
    <string name="create_task_notes">Notes</string>
    <string name="create_task_priority">Priority</string>
    <string name="todo_create_error">Task name cannot be empty</string>
    <string name="menu_new_list">New List</string>
    <string name="create_list_name">List name</string>
    <string name="title_activity_create_list">Create Todo List</string>
    <string name="create_list_color">List Color</string>
    <string name="create_todo_list">List</string>
    <string name="menu_logout">Log out</string>
    <string name="settings_theme">Use dark theme</string>
    <string name="all_todos">All Todos</string>
    <string name="no_list_error">To add Todos, you need to create a list first</string>
    <string name="settings_language">Language</string>
    <string name="settings_compact">Hide Todo notes</string>
    <string name="create_list_error">List name must not be empty</string>
    <string name="delete_list_prompt"><![CDATA[\"Are you sure you want to delete \'&var&\'? All Todos in this list will be deleted\"]]></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cerate_todo_title_hint">Groceries…</string>
    <string name="create_todo_notes_hint">Don\'t forget bread....</string>

</resources>
